--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12989,4 +12989,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
         margin-top: 5px;
         display: none;
     }
-    
+    .update_cart_btn {
+    margin-top: 20px;
+    text-align: center; /* Căn giữa nút */
+}
